--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Movie Watchlist</title>
 </head>
 <body>
-    
+    <h1>Find your movie</h1>
+    <button href="watchlist.html">My Watchlist</button>
+    <div id="search-container">
+        <input id="search-input" type="text">
+        <button id="search-button">Search</button>
+    </div>
+    <div id="movies-container"></div>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
