--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Find your movie</h1>
-    <button href="watchlist.html">My Watchlist</button>
+    <a href="watchlist.html">My Watchlist</a>
     <div id="search-container">
         <input id="search-input" type="text">
         <button id="search-button">Search</button>
